Lower: AppUserServiceImplTest: renaming, adding and removing some methods.